Add : Sreings In Localizations

--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -1,3 +1,65 @@
 {
-    "welcome":"Welcome to My App"
+    "welcome":"Welcome to My App",
+    "continue":"Continue",
+    "selectYourProfile":"Select Your Profile",
+    "teacher":"Teacher",
+    "parent":"Parent/Student",
+    "about":"About Hessah",
+    "explore":"Explore Classes",
+    "book":"Book Or Create Classes",
+    "startClass":"Start Your Class",
+    "submitProposalTeacher":"Submit Proposals",
+    "setTimes":"Set Available Times",
+    "join":"Join To Hessah",
+    "login":"Login",
+    "alreadyLogin":"Already User? Login",
+    "emailAdd":"Email Address",
+    "otpIncorrect":"OTP incorrect.",
+    "mobileNumber":"Mobile Number",
+    "sendAgain":"Resend Again",
+    "firstName":"First Name",
+    "lastName":"Last Name",
+    "enterYourFirstName":"Enter your first name",
+    "enterYourLastName":"Enter your last name",
+    "userInfo":"User Information",
+    "createPassword":"Create Password",
+    "password":"Password",
+    "retypePassword":"Retype Password",
+    "enterYourPasswordAgain":"Enter your password again",
+    "enterYourPassword":"Enter your Password",
+    "makeItVisible":"Make it visible for users",
+    "reSend":"Didn't receive the verification code?",
+    "enterMobileAgain":"Enter your mobile number",
+    "pleaseEnterMobile":"Please enter Mobile",
+    "kuwaitiNumber":"Kuwaiti number should be 8 digits",
+    "didntReceived":"Didn't receive the verification code?",
+    "verifyEmailAddress":"Verify Email Address",
+    "verifyMobileNumber":"Verify Mobile Number",
+    "passwordCriteria":"Password Criteria:",
+    "iHaveRead":"I have read and accept",
+    "pleaseEnterFirstName":"Please enter First Name",
+    "t&c":"Terms & Conditions",
+    "enterValidName":"Enter valid name",
+    "enterValidLastname":"Please enter Last Name",
+    "enterTheCodeWe":"Enter the verification code we sent to mobile number ending with",
+    "enterTheVerification":"Enter the verification code we sent to email address ending with",
+    "enterValidEmail":"Enter a valid email address (e.g., name@example.com)",
+    "pleaseEnter":"Please enter Email",
+    "enterEmail":"Enter your email address",
+    "explore":"Explore classes or Teachers and Start your learning plan",
+    "cantFind":"Can't find your class? No worries!You can create your needs.",
+    "bookClasses":"Book classes and start learning. Expand your classes to achieve your goals",
+    "exploreClasses": "Explore classes created by students and submit your proposals.",
+    "createAndClasses": "Create classes and start your teaching journey",
+    "setTimes": "Set your free times, and give the students the ability to book their favorite times",
+    "chooseLang":"Choose your Country and Language",
+    "minCharacters": "Contain Minimum 8 Characters",
+    "containNumbers": "Contain Numbers",
+    "containSpecialChars": "Contain Special characters (e.g., !, @, #, $)",
+    "containUppercase": "Contain Uppercase letters",
+    "containLowercase": "Contain Lowercase letters",
+    "matchPasswords": "New and Retype Passwords should match",
+    "setAvailableTimes": "Set Available Times",
+    "exploreApp": "Explore App",
+    "setAndGive": "Set your free times, and give the students the ability to book their favorite times"
 }
