--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -62,4 +62,116 @@
     "setAvailableTimes": "Set Available Times",
     "exploreApp": "Explore App",
     "setAndGive": "Set your free times, and give the students the ability to book their favorite times"
+    "personalInformation": "Personal Information",
+    "nationality": "Nationality",
+    "selectYourNationality": "Select your nationality",
+    "languageSpoken": "Languages Spoken",
+    "selectSpokenLanguages": "Select spoken languages",
+    "birthday": "Birthday",
+    "selectYourBirthday": "Select your birthday",
+    "completeProfile": "Complete Profile",
+    "cancel": "Cancel",
+    "makeItVisibleForUsers": "Make it visible for users",
+    "addMore": "Add More",
+    "uploadCivilID": "Upload Civil ID",
+    "gender": "Gender",
+    "civilID": "Civil ID",
+    "civilIDForUsage": "Civil ID for usage of app only, and we will not share this doc with anyone.",
+    "continueToTeachingInformation": "Continue To Teaching Information",
+    "male": "Male",
+    "feMale": "Female",
+    "teachingInformation": "Teaching Information",
+    "grade": "Grade",
+    "selectGrade/s": "Select grade/s",
+    "selectSubject/s": "Select subject/s",
+    "subjectTaught": "Subject Taught",
+    "schoolType": "School Type",
+    "selectSchoolType": "Select school type",
+    "curriculum": "Curriculum",
+    "selectCurriculum": "Select curriculum",
+    "typeOfClass": "Type Of Class",
+    "selectClassType": "Select class type",
+    "continueExperienceInformation": "Continue Experience Information",
+    "experienceInformation": "Experience Information",
+    "education": "Education",
+    "enterYourEducation": "Enter your education",
+    "experienceYears": "Experience Years",
+    "enterYearsOExperience": "Enter years of experience",
+    "experienceBrief": "Experience Brief",
+    "enterExperienceBrief": "Enter experience brief",
+    "certificates": "Certificates",
+    "continueToLastStep": "Continue To Last Step",
+    "financing": "Financing",
+    "enterIBANNumber": "Enter IBAN Number",
+    "bankAccountNickname": "Bank Account Nickname",
+    "enterNickname": "Enter nickname",
+    "IBANNumberIsNeeded": "IBAN number is needed to receive your classes income.",
+    "completeYourProfile": "Complete Your Profile",
+    "success": "Success",
+    "successMsg": "You have successfully submitted your profile information, and your account is pending for review.\n\nOnce approved, you'll be ready to commence teaching.\n\nWe'll notify you soon!.",
+    "done": "Done",
+    "createClass": "Create Class",
+    "classInfo": "Class Info",
+    "school": "School",
+    "subject": "Subject",
+    "classSummary": "Class Summary",
+    "nextForClassDetails": "Next for Class Details",
+    "classDetails": "Class Details",
+    "participators": "participators",
+    "minimum": "Minimum",
+    "maximum": "Maximum",
+    "kwd": "KWD",
+    "classCost": "Class Cost",
+    "numberOfSessions": "Number Of Sessions",
+    "selectDateAndTime": "select Date and Time",
+    "selectClass2DateAndTime": "select Class 2 Date and Time",
+    "class2DateAndTime": "Class 2 Date and Time",
+    "classDuration": "Class Duration",
+    "selectLocation": "Select Location",
+    "noAddressFound!": "No Address Found!",
+    "addAddressFound": "Add Address Found",
+    "otherParticipators": "Other Participators",
+    "optional": "(optional)",
+    "participators2": "participators 2",
+    "participators3": "participators 3",
+    "participators4": "participators 4",
+    "participators5": "participators 5",
+    "enterEmailAddress": "Enter email address",
+    "nextForCallsDetails": "Next for calls Details",
+    "addNewAddress": "Add New Address",
+    "selectCity": "Select City",
+    "city": "City",
+    "pleaseSelectYourCity": "Please Select Your City",
+    "enterYourAddressLine1": "Enter Your Address Line 1",
+    "enterAddress1": "Enter Address 1",
+    "enterAddress2": "Enter Address 2",
+    "address1": "Address 1",
+    "address2": "Address 2 (optional)",
+    "contactNumber": "Contact Number",
+    "enterMobileNumber": "Enter mobile number",
+    "location": "Location",
+    "setAsDefaultAddress": "Set as Default Address",
+    "successDes": "You have successfully booked your class, and you will get notification to pay after the teacher accept the class.",
+    "select1OrMore": "Select 1 or more",
+    "saveSearch": "Save Search",
+    "enterSearchName": "Enter search name",
+    "search": "Search",
+    "saveSearchAndShowResults": "Save Search and Show Results",
+    "noResultsFound!": "No Results Found!",
+    "refineYourSearch": "No results found. Please refine your search.",
+    "modifySearch": "Modify Search",
+    "forgotPassword!": "Forgot Password!",
+    "emailAddress": "Email Address",
+    "enterYourEmailAddress": "Enter your email address",
+    "resetPassword": "Reset Password",
+    "logIn": "Log In",
+    "resetPasswordLinkSent": "Reset Password Link Sent",
+    "passwordResetLink": "Password reset link sent! Please check your email and follow the instructions to reset your password.",
+    "didn'tReceiveTheLink": "Didn't receive the link?",
+    "searchForClasses": "Search For Classes",
+    "searchForTeacher": "Search For Teacher",
+    "select1OrMoreOptional": "Select 1 or more (optional)",
+    "userName": "User Name",
+    "science": "science. - Accounta.."
+
 }
