Add : Arabic Strings

--- a/assets/lang/er-AR.json
+++ b/assets/lang/er-AR.json
@@ -1,3 +1,64 @@
 {
-    "welcome":"Welcome to My App"
+    "welcome": "مرحبًا في تطبيقي",
+    "continue": "متابعة",
+    "selectYourProfile": "اختر ملفك الشخصي",
+    "teacher": "مدرس",
+    "parent": "والدين/طالب",
+    "about": "عن هيصة",
+    "explore": "استكشاف الصفوف",
+    "book": "حجز أو إنشاء فصول",
+    "startClass": "ابدأ الصف الخاص بك",
+    "submitProposalTeacher": "تقديم الاقتراحات",
+    "setTimes": "تحديد الأوقات المتاحة",
+    "join": "الانضمام إلى هيصة",
+    "login": "تسجيل الدخول",
+    "alreadyLogin": "مستخدم بالفعل؟ تسجيل الدخول",
+    "emailAdd": "عنوان البريد الإلكتروني",
+    "otpIncorrect": "رمز التحقق غير صحيح.",
+    "mobileNumber": "رقم الجوال",
+    "sendAgain": "إعادة الإرسال",
+    "firstName": "الاسم الأول",
+    "lastName": "الاسم الأخير",
+    "enterYourFirstName": "أدخل اسمك الأول",
+    "enterYourLastName": "أدخل اسمك الأخير",
+    "userInfo": "معلومات المستخدم",
+    "createPassword": "إنشاء كلمة المرور",
+    "password": "كلمة المرور",
+    "retypePassword": "إعادة كتابة كلمة المرور",
+    "enterYourPasswordAgain": "أدخل كلمة المرور مرة أخرى",
+    "enterYourPassword": "أدخل كلمة المرور الخاصة بك",
+    "makeItVisible": "اجعلها مرئية للمستخدمين",
+    "reSend": "لم تستلم رمز التحقق؟",
+    "enterMobileAgain": "أدخل رقم هاتفك المحمول مرة أخرى",
+    "pleaseEnterMobile": "الرجاء إدخال رقم الجوال",
+    "kuwaitiNumber": "يجب أن يكون الرقم الكويتي مكونًا من 8 أرقام",
+    "didntReceived": "لم تستلم رمز التحقق؟",
+    "verifyEmailAddress": "تحقق من عنوان البريد الإلكتروني",
+    "verifyMobileNumber": "تحقق من رقم الجوال",
+    "passwordCriteria": "معايير كلمة المرور:",
+    "iHaveRead": "لقد قرأت ووافقت",
+    "t&c": "الشروط والأحكام",
+    "enterValidName": "أدخل اسمًا صالحًا",
+    "enterValidLastname": "الرجاء إدخال اسم العائلة الصحيح",
+    "enterTheCodeWe": "أدخل رمز التحقق الذي أرسلناه إلى رقم الجوال الذي ينتهي بـ",
+    "enterTheVerification": "أدخل رمز التحقق الذي أرسلناه إلى عنوان البريد الإلكتروني الذي ينتهي بـ",
+    "enterValidEmail": "أدخل عنوان بريد إلكتروني صالح (مثل name@example.com)",
+    "pleaseEnter": "الرجاء إدخال عنوان البريد الإلكتروني",
+    "enterEmail": "أدخل عنوان بريدك الإلكتروني",
+    "explore": "استكشاف الصفوف أو المعلمين وبدء خطة التعلم الخاصة بك",
+    "cantFind": "لا يمكن العثور على فصلك؟ لا داعي للقلق! يمكنك إنشاء احتياجاتك.",
+    "bookClasses": "حجز الصفوف وبدء التعلم. قم بتوسيع فصولك لتحقيق أهدافك",
+    "exploreClasses": "استكشاف الصفوف التي أنشأها الطلاب وتقديم اقتراحاتك.",
+    "createAndClasses": "إنشاء فصول وبدء رحلتك في التدريس",
+    "setTimes": "تحديد أوقاتك الفارغة ومنح الطلاب القدرة على حجز أوقاتهم المفضلة",
+    "chooseLang": "اختر بلدك ولغتك",
+    "minCharacters": "يجب أن يحتوي على الأقل 8 أحرف",
+    "containNumbers": "يجب أن يحتوي على أرقام",
+    "containSpecialChars": "يجب أن يحتوي على أحرف خاصة (مثل !، @، #، $)",
+    "containUppercase": "يجب أن يحتوي على حروف كبيرة",
+    "containLowercase": "يجب أن يحتوي على حروف صغيرة",
+    "matchPasswords": "يجب أن تتطابق كلمة المرور الجديدة وإعادة كتابتها",
+    "setAvailableTimes": "تحديد الأوقات المتاحة",
+    "exploreApp": "استكشاف التطبيق",
+    "setAndGive": "حدد أوقاتك الفارغة وامنح الطلاب القدرة على حجز أوقاتهم المفضلة"
 }
