Create static string for localization

--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -61,7 +61,7 @@
     "matchPasswords": "New and Retype Passwords should match",
     "setAvailableTimes": "Set Available Times",
     "exploreApp": "Explore App",
-    "setAndGive": "Set your free times, and give the students the ability to book their favorite times"
+    "setAndGive": "Set your free times, and give the students the ability to book their favorite times",
     "personalInformation": "Personal Information",
     "nationality": "Nationality",
     "selectYourNationality": "Select your nationality",
@@ -172,6 +172,64 @@
     "searchForTeacher": "Search For Teacher",
     "select1OrMoreOptional": "Select 1 or more (optional)",
     "userName": "User Name",
-    "science": "science. - Accounta.."
+    "science": "science. - Accounta..",
+    "addBankAccount": "Add Bank Account",
+    "valid": "valid",
+    "setAsDefaultAccount": "Set as Default Account",
+    "transactionDate": "Transaction Date",
+    "transactionNumber": "Transaction Number",
+    "transactionType": "Transaction Type",
+    "paymentMethod": "Payment Method",
+    "topUpAmount": "Top Up Amount",
+    "downloadInvoice": "Download Invoice",
+    "classFees": "Class Fees",
+    "invoiceDetails": "Invoice Details",
+    "totalClassCost": "Total Class Cost",
+    "hessahFees": "Hessah Fees",
+    "invoiceAmount": "Invoice Amount",
+    "sharingInvoicePDF": "Sharing Invoice PDF",
+    "transactionDate:": "Transaction Date:",
+    "transactionNumber:": "Transaction Number:",
+    "transactionType:": "Transaction Type:",
+    "classCost:": "Class Cost:",
+    "numberOfSessions:": "Number of Sessions:",
+    "totalClassCost:": "Total Class Cost:",
+    "hessahFees:": "Hessah Fees:",
+    "invoiceAmount:": "Invoice Amount:",
+    "sort/Filter": "Sort / Filter",
+    "sortBy": "Sort by",
+    "filterBy": "Filter by",
+    "clearSelections": "Clear Selections",
+    "default": "Default",
+    "setDefault": "Set Default",
+    "invoices": "Invoices",
+    "invoiceNo.": "Invoice No.",
+    "welcome!": "Welcome!",
+    "abdullahMohamed": "Abdullah Mohamed",
+    "availableBalance": "Available Balance",
+    "activeClassesBooked": "Active Classes\nBooked",
+    "newClassesCreated": "New Classes\nnCreated",
+    "pendingPayment": "Pending\nPayment",
+    "topUpWallet": "Top Up Wallet",
+    "bankAccounts": "Bank Accounts",
+    "withdraw": "Withdraw",
+    "lastInvoices": "Last Invoices",
+    "totalGains": "Total Gains",
+    "vsLastMonth": "vs last Month",
+    "bookingConfirmation": "Booking Confirmation",
+    "amountToPay": "Amount to pay",
+    "pay": "Pay",
+    "enterTopUpAmount": "Enter top up amount",
+    "topUp": "Top Up",
+    "withdrawAmount": "Withdraw Amount",
+    "enterWithdrawAmount": "Enter withdraw amount",
+    "withdrawAllBalance": "Withdraw All Balance",
+    "bankAccount": "Bank Account",
+    "iban": "IBAN",
+    "select": "Select",
+    "addNewAccount": "Add New Account",
+    "mainAccount": "Main Account",
+    "noBankAccountsFound!": "No Bank Accounts Found!",
+    "addNewBankAccount": "Add New Bank Account"
 
 }
