--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -5,7 +5,7 @@
     "teacher":"Teacher",
     "parent":"Parent/Student",
     "about":"About Hessah",
-    "explore":"Explore Classes",
+    "exploreClasses":"Explore Classes",
     "book":"Book Or Create Classes",
     "startClass":"Start Your Class",
     "submitProposalTeacher":"Submit Proposals",
@@ -49,7 +49,7 @@
     "explore":"Explore classes or Teachers and Start your learning plan",
     "cantFind":"Can't find your class? No worries!You can create your needs.",
     "bookClasses":"Book classes and start learning. Expand your classes to achieve your goals",
-    "exploreClasses": "Explore classes created by students and submit your proposals.",
+    "exploreClassesCreated": "Explore classes created by students and submit your proposals.",
     "createAndClasses": "Create classes and start your teaching journey",
     "setTimes": "Set your free times, and give the students the ability to book their favorite times",
     "chooseLang":"Choose your Country and Language",
