Add notification screen ui

--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -71,5 +71,6 @@
     "optional": "(optional)",
     "curriculum": "Curriculum",
     "subject": "Subject",
-    "saveMyPreferences": "Save My Preferences"
+    "saveMyPreferences": "Save My Preferences",
+    "notification": "Notification"
 }
