--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -71,5 +71,38 @@
     "curriculum": "Curriculum",
     "subject": "Subject",
     "saveMyPreferences": "Save My Preferences",
-    "notification": "Notification"
+    "notification": "Notification",
+    "settings": "Settings",
+    "userName": "User Name",
+    "changeName": "Change Name",
+    "save": "Save",
+    "success": "Success",
+    "done": "Done",
+    "youHaveSuccessfully": "You have successfully changed your name.",
+    "youHaveSuccessfullyAdded": "You have successfully added new available teaching time.",
+
+    "personalInformation": "Personal Information",
+    "addMobileNumber": "Add Mobile Number",
+    "manageAddress": "Manage Address",
+    "accountSettings": "Account Settings",
+    "language": "Language",
+    "changeCountry": "Change Country",
+    "support": "Supporty",
+    "appSupport": "App Support",
+    "security": "Security",
+    "changePassword": "Change Password",
+    "loginWithBiometric": "Login With Biometric",
+    "logOut": "Logout",
+    "manageSubscription": "Manage Subscription",
+    "manageAvailabilityTime": "Manage Availability Time",
+    "availableTimes": "Available Times",
+    "addFreeTime": "Add Free Time",
+    "date": "Date",
+    "selectStartTime": "Select Start Time",
+    "startTime": "Start Time",
+    "selectEndTime": "Select End Time",
+    "endTime": "End Time",
+    "classDuration": "Class Duration",
+    "anotherFreeTimeIs": "Another free time is found during your selection. If you proceed, the times will be merged.",
+    "addAvailableTeachingTime": "Add Available Teaching Time"
 }
