add local string on em-US.json file

--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -104,5 +104,31 @@
     "endTime": "End Time",
     "classDuration": "Class Duration",
     "anotherFreeTimeIs": "Another free time is found during your selection. If you proceed, the times will be merged.",
-    "addAvailableTeachingTime": "Add Available Teaching Time"
+    "addAvailableTeachingTime": "Add Available Teaching Time",
+    "nextForClassDetails": "Next for Class Details",
+    "classSummary": "Class Summary",
+    "createClass": "Create class",
+    "classDetails": "Class Details",
+    "participators": "participators",
+    "minimum": "Minimum",
+    "maximum": "Maximum",
+    "kwd": "KWD",
+    "classCost": "Class Cost",
+    "numberOfSessions": "Number Of Sessions",
+    "selectDateAndTime": "select Date and Time",
+    "selectClass2DateAndTime": "select Class 2 Date and Time",
+    "class2DateAndTime": "Class 2 Date and Time",
+    "selectLocation": "Select Location",
+    "noAddressFound": "No Address Found!",
+    "addAddressFound": "Add Address Found",
+    "OtherParticipators": "Other Participators",
+    "participators2": "participators 2",
+    "participators3": "participators 3",
+    "participators4": "participators 4",
+    "participators5": "participators 5",
+    "enterEmailAddress": "Enter email address",
+    "default": "Default",
+    "setDefault": "Set Default",
+    "select": "Select",
+    "addNewAddress": "Add New Address"
 }
