Profile wise manage create class view

--- a/assets/lang/en-US.json
+++ b/assets/lang/en-US.json
@@ -121,7 +121,7 @@
     "selectLocation": "Select Location",
     "noAddressFound": "No Address Found!",
     "addAddressFound": "Add Address Found",
-    "OtherParticipators": "Other Participators",
+    "otherParticipators": "Other Participators",
     "participators2": "participators 2",
     "participators3": "participators 3",
     "participators4": "participators 4",
@@ -130,5 +130,21 @@
     "default": "Default",
     "setDefault": "Set Default",
     "select": "Select",
-    "addNewAddress": "Add New Address"
+    "addNewAddress": "Add New Address",
+    "cancel": "Cancel",
+    "classInfo": "Class Info",
+    "allowTheClassAtTheStudentPlace": "Allow the class at the student place",
+    "selectCity": "Select City",
+    "city": "City",
+    "pleaseSelectYourCity": "Please Select Your City",
+    "enterYourAddressLine1": "Enter Your Address Line 1",
+    "enterAddress1": "Enter Address 1",
+    "address1": "Address 1",
+    "enterAddress2": "Enter Address 2",
+    "address2optional": "Address 2 (optional)",
+    "contactNumber": "Contact Number",
+    "enterMobileNumber": "Enter mobile number",
+    "location": "Location",
+    "setAsDefaultAddress": "Set as Default Address",
+    "msgSuccessfullyBookedClass": "You have successfully booked your class, and you will get notification to pay after the teacher accept the class."
 }
