Add arabic language map

--- a/assets/lang/er-AR.json
+++ b/assets/lang/er-AR.json
@@ -4,31 +4,31 @@
     "selectYourProfile": "اختر ملفك الشخصي",
     "teacher": "مدرس",
     "parent": "والدين/طالب",
-    "about": "عن هيصة",
-    "explore": "استكشاف الصفوف",
-    "book": "حجز أو إنشاء فصول",
-    "startClass": "ابدأ الصف الخاص بك",
-    "submitProposalTeacher": "تقديم الاقتراحات",
-    "setTimes": "تحديد الأوقات المتاحة",
-    "join": "الانضمام إلى هيصة",
+    "about": "حول هيسة",
+    "exploreClasses": "استكشاف الصفوف",
+    "book": "احجز أو أنشئ صفوفًا",
+    "startClass": "ابدأ صفك",
+    "submitProposalTeacher": "قدم اقتراحات",
+    "setTimes": "قم بتحديد الأوقات المتاحة",
+    "join": "انضم إلى هيسة",
     "login": "تسجيل الدخول",
     "alreadyLogin": "مستخدم بالفعل؟ تسجيل الدخول",
     "emailAdd": "عنوان البريد الإلكتروني",
-    "otpIncorrect": "رمز التحقق غير صحيح.",
+    "otpIncorrect": "رمز OTP غير صحيح.",
     "mobileNumber": "رقم الجوال",
     "sendAgain": "إعادة الإرسال",
     "firstName": "الاسم الأول",
-    "lastName": "الاسم الأخير",
+    "lastName": "اسم العائلة",
     "enterYourFirstName": "أدخل اسمك الأول",
-    "enterYourLastName": "أدخل اسمك الأخير",
+    "enterYourLastName": "أدخل اسمك العائلي",
     "userInfo": "معلومات المستخدم",
-    "createPassword": "إنشاء كلمة المرور",
+    "createPassword": "إنشاء كلمة مرور",
     "password": "كلمة المرور",
-    "retypePassword": "إعادة كتابة كلمة المرور",
+    "retypePassword": "أعد كتابة كلمة المرور",
     "enterYourPasswordAgain": "أدخل كلمة المرور مرة أخرى",
     "enterYourPassword": "أدخل كلمة المرور الخاصة بك",
     "makeItVisible": "اجعلها مرئية للمستخدمين",
-    "enterMobileAgain": "أدخل رقم هاتفك المحمول مرة أخرى",
+    "enterMobileAgain": "أدخل رقم جوالك",
     "pleaseEnterMobile": "الرجاء إدخال رقم الجوال",
     "kuwaitiNumber": "يجب أن يكون الرقم الكويتي مكونًا من 8 أرقام",
     "didntReceived": "لم تستلم رمز التحقق؟",
@@ -36,28 +36,117 @@
     "verifyMobileNumber": "تحقق من رقم الجوال",
     "passwordCriteria": "معايير كلمة المرور:",
     "iHaveRead": "لقد قرأت ووافقت",
-    "t&c": "الشروط والأحكام",
-    "enterValidName": "أدخل اسمًا صالحًا",
+    "pleaseEnterFirstName": "الرجاء إدخال الاسم الأول",
+    "t&c": "البنود والشروط",
+    "enterValidName": "أدخل اسمًا صحيحًا",
     "enterValidLastname": "الرجاء إدخال اسم العائلة الصحيح",
     "enterTheCodeWe": "أدخل رمز التحقق الذي أرسلناه إلى رقم الجوال الذي ينتهي بـ",
     "enterTheVerification": "أدخل رمز التحقق الذي أرسلناه إلى عنوان البريد الإلكتروني الذي ينتهي بـ",
-    "enterValidEmail": "أدخل عنوان بريد إلكتروني صالح (مثل name@example.com)",
-    "pleaseEnter": "الرجاء إدخال عنوان البريد الإلكتروني",
-    "enterEmail": "أدخل عنوان بريدك الإلكتروني",
-    "explore": "استكشاف الصفوف أو المعلمين وبدء خطة التعلم الخاصة بك",
-    "cantFind": "لا يمكن العثور على فصلك؟ لا داعي للقلق! يمكنك إنشاء احتياجاتك.",
-    "bookClasses": "حجز الصفوف وبدء التعلم. قم بتوسيع فصولك لتحقيق أهدافك",
-    "exploreClasses": "استكشاف الصفوف التي أنشأها الطلاب وتقديم اقتراحاتك.",
-    "createAndClasses": "إنشاء فصول وبدء رحلتك في التدريس",
-    "setTimes": "تحديد أوقاتك الفارغة ومنح الطلاب القدرة على حجز أوقاتهم المفضلة",
+    "enterValidEmail": "أدخل عنوان بريد إلكتروني صحيح (مثل name@example.com)",
+    "pleaseEnter": "الرجاء إدخال البريد الإلكتروني",
+    "enterEmail": "أدخل عنوان البريد الإلكتروني الخاص بك",
+    "explore": "استكشف الصفوف أو المعلمين وابدأ خطتك التعلمية",
+    "cantFind": "لا يمكن العثور على صفك؟ لا داعي للقلق! يمكنك إنشاء احتياجاتك.",
+    "bookClasses": "احجز صفوفًا وابدأ التعلم. قم بتوسيع صفوفك لتحقيق أهدافك",
+    "exploreClassesCreated": "استكشاف الصفوف التي أنشأها الطلاب وتقديم مقترحاتك.",
+    "createAndClasses": "أنشئ صفوفًا وابدأ رحلتك التعليمية",
+    "msgSetTimes": "قم بتحديد أوقاتك المتاحة وقدم الفرصة للطلاب لحجز أوقاتهم المفضلة",
     "chooseLang": "اختر بلدك ولغتك",
-    "minCharacters": "يجب أن يحتوي على الأقل 8 أحرف",
-    "containNumbers": "يجب أن يحتوي على أرقام",
-    "containSpecialChars": "يجب أن يحتوي على أحرف خاصة (مثل !، @، #، $)",
-    "containUppercase": "يجب أن يحتوي على حروف كبيرة",
-    "containLowercase": "يجب أن يحتوي على حروف صغيرة",
+    "minCharacters": "تحتوي على الحد الأدنى من 8 أحرف",
+    "containNumbers": "تحتوي على أرقام",
+    "containSpecialChars": "تحتوي على رموز خاصة (على سبيل المثال: !، @، #، $)",
+    "containUppercase": "تحتوي على أحرف كبيرة",
+    "containLowercase": "تحتوي على أحرف صغيرة",
     "matchPasswords": "يجب أن تتطابق كلمة المرور الجديدة وإعادة كتابتها",
-    "setAvailableTimes": "تحديد الأوقات المتاحة",
+    "setAvailableTimes": "قم بتحديد الأوقات المتاحة",
     "exploreApp": "استكشاف التطبيق",
-    "setAndGive": "حدد أوقاتك الفارغة وامنح الطلاب القدرة على حجز أوقاتهم المفضلة"
+    "setAndGive": "قم بتحديد أوقاتك الحرة وقدم الفرصة للطلاب لحجز أوقاتهم المفضلة",
+    "customization": "تخصيص",
+    "msgCustomization": "ضبط رحلتك التعليمية عن طريق تحديد التفضيلات لتجربة شخصية",
+    "msgCustomizationNow": "قم بتخصيص رحلتك التعليمية الآن!",
+    "grade": "الصف",
+    "selectMore": "حدد 1 أو أكثر",
+    "school": "المدرسة",
+    "optional": "(اختياري)",
+    "curriculum": "منهاج",
+    "subject": "الموضوع",
+    "saveMyPreferences": "حفظ تفضيلاتي",
+    "notification": "الإشعارات",
+    "settings": "الإعدادات",
+    "userName": "اسم المستخدم",
+    "changeName": "تغيير الاسم",
+    "save": "حفظ",
+    "success": "نجاح",
+    "done": "تم",
+    "youHaveSuccessfully": "لقد قمت بتغيير اسمك بنجاح.",
+    "youHaveSuccessfullyAdded": "لقد قمت بإضافة وقت التدريس المتاح بنجاح.",
+    "personalInformation": "معلومات شخصية",
+    "addMobileNumber": "إضافة رقم الجوال",
+    "manageAddress": "إدارة العنوان",
+    "accountSettings": "إعدادات الحساب",
+    "language": "اللغة",
+    "changeCountry": "تغيير البلد",
+    "support": "الدعم",
+    "appSupport": "دعم التطبيق",
+    "security": "الأمان",
+    "changePassword": "تغيير كلمة المرور",
+    "loginWithBiometric": "تسجيل الدخول بالبيومترية",
+    "logOut": "تسجيل الخروج",
+    "manageSubscription": "إدارة الاشتراك",
+    "manageAvailabilityTime": "إدارة أوقات التوفر",
+    "availableTimes": "الأوقات المتاحة",
+    "addFreeTime": "إضافة وقت حر",
+    "date": "التاريخ",
+    "selectStartTime": "حدد وقت البداية",
+    "startTime": "وقت البداية",
+    "selectEndTime": "حدد وقت الانتهاء",
+    "endTime": "وقت الانتهاء",
+    "classDuration": "مدة الصف",
+    "anotherFreeTimeIs": "تم العثور على وقت حر آخر خلال اختيارك. إذا قمت بالمتابعة، سيتم دمج الأوقات.",
+    "addAvailableTeachingTime": "إضافة وقت تدريس متاح",
+    "nextForClassDetails": "التالي لتفاصيل الصف",
+    "classSummary": "ملخص الصف",
+    "createClass": "إنشاء صف",
+    "classDetails": "تفاصيل الصف",
+    "participators": "المشاركين",
+    "minimum": "الحد الأدنى",
+    "maximum": "الحد الأقصى",
+    "kwd": "دينار كويتي",
+    "classCost": "تكلفة الصف",
+    "numberOfSessions": "عدد الجلسات",
+    "selectDateAndTime": "حدد التاريخ والوقت",
+    "selectClass2DateAndTime": "حدد تاريخ ووقت الصف 2",
+    "class2DateAndTime": "تاريخ ووقت الصف 2",
+    "selectLocation": "اختر الموقع",
+    "noAddressFound": "لم يتم العثور على عنوان!",
+    "addAddressFound": "إضافة عنوان",
+    "otherParticipators": "مشاركون آخرون",
+    "participators2": "مشاركون 2",
+    "participators3": "مشاركون 3",
+    "participators4": "مشاركون 4",
+    "participators5": "مشاركون 5",
+    "enterEmailAddress": "أدخل عنوان البريد الإلكتروني",
+    "default": "الافتراضي",
+    "setDefault": "تعيين كافتراضي",
+    "select": "تحديد",
+    "addNewAddress": "إضافة عنوان جديد",
+    "cancel": "إلغاء",
+    "classInfo": "معلومات الصف",
+    "allowTheClassAtTheStudentPlace": "السماح بالصف في مكان الطالب",
+    "selectCity": "اختر المدينة",
+    "city": "المدينة",
+    "pleaseSelectYourCity": "الرجاء اختيار مدينتك",
+    "enterYourAddressLine1": "أدخل خط العنوان 1",
+    "enterAddress1": "أدخل العنوان 1",
+    "address1": "العنوان 1",
+    "enterAddress2": "أدخل العنوان 2",
+    "address2optional": "العنوان 2 (اختياري)",
+    "contactNumber": "رقم الاتصال",
+    "enterMobileNumber": "أدخل رقم الجوال",
+    "location": "الموقع",
+    "setAsDefaultAddress": "تعيين كعنوان افتراضي",
+    "msgSuccessfullyBookedClass": "لقد حجزت الصف بنجاح، وستتلقى إشعارًا للدفع بعد قبول المعلم للصف.",
+    "submit": "إرسال",
+    "proposalDetails": "تفاصيل الاقتراح",
+    "classDateAndTime": "تاريخ ووقت الصف"
 }
