--- a/assets/lang/er-AR.json
+++ b/assets/lang/er-AR.json
@@ -148,5 +148,8 @@
     "msgSuccessfullyBookedClass": "لقد حجزت الصف بنجاح، وستتلقى إشعارًا للدفع بعد قبول المعلم للصف.",
     "submit": "إرسال",
     "proposalDetails": "تفاصيل الاقتراح",
-    "classDateAndTime": "تاريخ ووقت الصف"
+    "classDateAndTime": "تاريخ ووقت الصف",
+    "ibanError": "IBAN is Empty",
+    "ibanLengthError": "Minimum IBAN Length should be 30 digits",
+    "iabnLocalError": "You have to enter local Bank Account Number"
 }
